tests/baselines/reference/functionCall8.errors.txt
tests/cases/compiler/functionCall8.ts(3,1): error TS2346: Supplied parameters do not match any signature of call target.
tests/cases/compiler/functionCall8.ts(4,5): error TS2345: Argument of type '4' is not assignable to parameter of type 'string'.


==== tests/cases/compiler/functionCall8.ts (2 errors) ====
    function foo(a?:string){}
    foo('foo'); 
    foo('foo', 'bar'); 
    ~~~~~~~~~~~~~~~~~
!!! error TS2346: Supplied parameters do not match any signature of call target.
    foo(4);
        ~
!!! error TS2345: Argument of type '4' is not assignable to parameter of type 'string'.
    foo();
    